fix wrap on compare apge

--- a/static/blue/css/style.css
+++ b/static/blue/css/style.css
@@ -5628,3 +5628,6 @@ a + .for_list_block {
 .compare_ul, .compare_table_tab_content {
     white-space: nowrap;
 }
+.compare_block_table ul li {
+    white-space: initial!important;
+}
